univerlsal7420-common: overlay: Add support for Screen Recording Signed-off-by: Rodrigo Martinez <rear097@gmail.com>
Change-Id: I85e67dc5c3c2da84190ce3f11e50babf9602a748

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -418,4 +418,7 @@
 
     <!-- Whether device supports button backlight -->
     <bool name="config_button_brightness_support">true</bool>
+
+    <!-- Whether to use in-built Screen Record service -->
+    <bool name="config_showScreenRecord">true</bool>
 </resources>
