universal7420-common: overlay: Add home button to wake support Signed-off-by: Rodrigo Martinez <rear097@gmail.com>
Change-Id: I4c6fe09549d6a8a51ddc3297ba76f6ae62025014

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -453,6 +453,8 @@
     <integer name="config_deviceHardwareWakeKeys">72</integer>
 
     <!-- Button brightness -->
-    <bool name="config_button_brightness_support">true</bool>
     <integer name="config_button_brightness_default">128</integer>
+
+    <!-- Use home button as wake button-->
+    <bool name="config_enableHomeButtonWake">true</bool>
 </resources>
